--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "viggos-radio",
   "version": "0.1.0",
-  "private": true,
-  "description": "A radio player by and for Viggo",
-  "repository": "https://github.com/viggoStrom/Viggos-Radio",
+  "author": {
+    "name": "Viggo",
+    "email": "ViggoStrom05+vr@gmail.com"
+  },
   "license": "MIT",
-  "author": "Viggo Ström",
+  "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -13,19 +14,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "sass": "^1.83.4",
+    "typescript": "^5"
   }
 }
