--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "description": "A radio player by and for Viggo.",
   "author": {
-    "name": "Viggo",
-    "email": "ViggoStrom05+vr@gmail.com"
+    "name": "Viggo Ström",
+    "email": "ViggoStrom05+vr@gmail.com",
+    "url": "https://viggostrom.github.io/"
   },
   "private": true,
   "scripts": {
@@ -14,6 +15,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.12",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -21,7 +23,8 @@
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.474.0",
-    "next": "^15.1.6",
+    "next": "^15.2.4",
+    "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
