--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "node prisma/seed.mts"
+  },
   "dependencies": {
     "@clerk/localizations": "^3.13.4",
     "@clerk/nextjs": "^6.12.12",
