--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
-    "lucide-react": "^0.474.0",
+    "lucide-react": "^0.485.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
