--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/postcss": "^4.0.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.485.0",
     "next": "^15.2.4",
@@ -48,5 +49,6 @@
     "prisma": "^6.5.0",
     "tailwindcss": "^4.0.17",
     "typescript": "^5"
-  }
+  },
+  "type": "module"
 }
