--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "next lint"
   },
   "prisma": {
-    "seed": "node prisma/seed.mts"
+    "seed": "tsx prisma/seed.mts"
   },
   "dependencies": {
     "@clerk/localizations": "^3.13.4",
@@ -48,6 +48,7 @@
     "postcss": "^8.5.3",
     "prisma": "^6.5.0",
     "tailwindcss": "^4.0.17",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   },
   "type": "module"
