--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@clerk/localizations": "^3.13.4",
     "@clerk/nextjs": "^6.12.12",
+    "@clerk/themes": "^2.2.26",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
