--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "viggos-radio",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A radio player by and for Viggo.",
   "author": {
     "name": "Viggo Ström",
     "email": "ViggoStrom05+vr@gmail.com",
-    "url": "https://viggostrom.github.io/"
+    "url": "https://viggo-strom.se/"
   },
   "private": true,
   "scripts": {
@@ -18,41 +18,41 @@
     "seed": "tsx prisma/seed.mts"
   },
   "dependencies": {
-    "@clerk/localizations": "^3.13.4",
-    "@clerk/nextjs": "^6.12.12",
-    "@clerk/themes": "^2.2.26",
-    "@prisma/client": "^6.5.0",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-slider": "^1.2.3",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@tailwindcss/postcss": "^4.0.17",
+    "@clerk/localizations": "^3.13.10",
+    "@clerk/nextjs": "^6.15.0",
+    "@clerk/themes": "^2.2.32",
+    "@prisma/client": "^6.6.0",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-slider": "^1.2.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@tailwindcss/postcss": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "fuse.js": "^7.1.0",
-    "lucide-react": "^0.485.0",
-    "next": "^15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
+    "lucide-react": "^0.488.0",
+    "next": "^15.3.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "eslint": "^9.24.0",
+    "eslint-config-next": "15.3.0",
     "postcss": "^8.5.3",
-    "prisma": "^6.5.0",
-    "tailwindcss": "^4.0.17",
+    "prisma": "^6.6.0",
+    "tailwindcss": "^4.1.4",
     "tsx": "^4.19.3",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   },
   "type": "module"
 }
