--- a/package.json
+++ b/package.json
@@ -18,40 +18,41 @@
     "seed": "tsx prisma/seed.mts"
   },
   "dependencies": {
-    "@clerk/localizations": "^3.13.10",
-    "@clerk/nextjs": "^6.15.0",
-    "@clerk/themes": "^2.2.32",
-    "@prisma/client": "^6.6.0",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-slider": "^1.2.4",
+    "@clerk/localizations": "^3.14.2",
+    "@clerk/nextjs": "^6.18.2",
+    "@clerk/themes": "^2.2.38",
+    "@prisma/client": "^6.7.0",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
-    "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/postcss": "^4.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "fuse.js": "^7.1.0",
-    "lucide-react": "^0.488.0",
-    "next": "^15.3.0",
+    "lucide-react": "^0.503.0",
+    "next": "^15.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "^1.2.5",
+    "tw-animate-css": "^1.2.8",
+    "use-debounce": "^10.0.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "eslint": "^9.24.0",
-    "eslint-config-next": "15.3.0",
+    "@types/react-dom": "^19.1.3",
+    "eslint": "^9.25.1",
+    "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
-    "prisma": "^6.6.0",
-    "tailwindcss": "^4.1.4",
-    "tsx": "^4.19.3",
+    "prisma": "^6.7.0",
+    "tailwindcss": "^4.1.5",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
   "type": "module"
