update name to Vena

--- a/server-code/vr-radio-start.service
+++ b/server-code/vr-radio-start.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=Viggo's Radio Service
+Description=Vena's Radio Service
 After=network.target
 
 [Service]
 User=root
-WorkingDirectory=/home/vr/Viggos-Radio
+WorkingDirectory=/home/vr/Venas-Radio
 ExecStart=/home/vr/.nvm/versions/node/v23.7.0/bin/yarn run start
 Restart=always
 RestartSec=3
