--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ./src"
+    "lint": "tsc --noEmit && eslint ./src"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
