--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "tsc --noEmit && eslint ./src"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.37.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
