--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.37.3",
+    "@prisma/adapter-mariadb": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.4",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.563.0",
     "next": "^16.1.6",
@@ -39,6 +42,7 @@
     "eslint-plugin-react-refresh": "^0.5.0",
     "globals": "^17.3.0",
     "postcss": "^8",
+    "prisma": "^7.3.0",
     "shadcn": "^3.8.4",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
