--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.21.0",
     "use-debounce": "^10.1.0"
   },
   "devDependencies": {
